# rustfc

./: .gitignore  .gitmodules  Cargo.toml  README.md
rustfc_code/: Cargo.toml
rustfc_code/src/: main.rs
rustfc_code/src/drivers/imu/: imu.rs  mod.rs  mpu6000.rs
rustfc_code/src/platform/: mod.rs
