[package]
name = "rustfc"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>", "Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.2"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
usbd-serial = {path = "/home/zach/projects/rust/usbd-serial", version = "0.1.0"}
embedded-hal = "0.2.3"
stm32f4xx-hal = { version = "0.5.0", features = ["stm32f405", "synopsys-usb-otg", "usb_fs"] }
usb-device = "0.2.2"
